<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="40dp"
    tools:context="br.unip.www.webrtc.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_login_image"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/splash_logo"
        android:layout_marginBottom="20dp"
        android:alpha="0" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_login_image">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/activity_login_edt_login"
            android:hint="@string/label_login"
            android:layout_marginBottom="10dp"
            android:paddingBottom="15dp"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_login_edt_password"
            android:hint="@string/label_password"
            android:layout_marginBottom="10dp"
            android:paddingBottom="15dp"
            android:inputType="textPassword" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_login"
            android:id="@+id/activity_login_login"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_exit"
            android:id="@+id/activity_login_exit"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>
