<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.unip.www.webrtc.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="center"
        android:id="@+id/linearLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_main_image_view"
            android:src="@drawable/video_main"
            android:padding="40dp"
            android:layout_marginBottom="5dp" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_camera_1"
        android:id="@+id/activity_main_camera_one"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_camera_2"
        android:id="@+id/activity_main_camera_two"
        android:layout_below="@+id/activity_main_camera_one"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_config"
        android:id="@+id/activity_main_video_config"
        android:layout_below="@+id/activity_main_camera_two"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:layout_marginBottom="5dp" />

</RelativeLayout>
